Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.2.6 =
* Fixed issue with wrong MD5 for instructor username in shortcodes which caused broken instructor single page if "Show Instructor Username in URL" option is not selected
* Fixed issue with table prefix (instructor_by_hash)
* Fix broken redirect to cart on signup

= 1.2.2.5 =
* Multisite improvements for students and instructors.
* Added course categories and course categories widget (in order to make it work please re-save CoursePress settings)
* Fixed: CoursePress theme navigation restored in responsive/mobile views.
* Improved some responsive elements of the CoursePress theme.
* Fixed issue with mobile menu not appearing on the some Android devices
* Small code improvements
* Updated MarketPress to 2.9.5.7

= 1.2.2.4 =
* Added integration with "Terms of Service" plugin http://premium.wpmudev.org/project/terms-of-service/
* Improved CoursePress for multi-site.
* Improved CoursePress security for multi-site.
* Improved UX for MarketPress in the admin (MarketPress activation and installation menu, links and messages shown to users who don't have required permissions)
* Future integration with Ultimate Facebook plugin to better promote courses on Facebook using OpenGraph data. (Currently works with CoursePress theme, but requires future Ultimate Facebook 2.7.8+ for all other themes.)
* Fixed: Instructors can now successfully create own courses (provided capability is set in CoursePress settings).

= 1.2.2.3=
* Changed the method of activation and installation of MarketPress
* Resolved issue with incorrect SKU being returned in checkout process.

= 1.2.2.2=
* Fixed issue with not showing HTML tags in excerpt
* Resolved issues with UTF-8 characters in filename in the TCPDF library
* Fixed up issue with translation files not working properly.
  - Updated languages files.